--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ html {
 body {
   margin: 0%;
   padding: 0%;
-  min-width: auto;
-  height:100vh;
+  min-width: 600px;
   background-color: #171717;
 }
 nav {
